Fixed the rozarpay Commit